# geoninja

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.md  docker-compose.yaml  package-lock.json  package.json  pytest.ini
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/data/: glhymps.manifest.json  glim.manifest.json  hydr_grad_ger.manifest.json  rock_properties.manifest.json  rock_properties.manifest.yaml
backend/scripts/: rebase_openapi_contract.py
backend/src/geoninja_backend/: main.py
backend/src/geoninja_backend/api/: analysis_routes.py  local_param_routes.py  router.py
backend/src/geoninja_backend/core/: analysis_result_registry.py  param_registry.py
backend/src/geoninja_backend/models/: analysis_run.py  common.py  local_param_lookup.py
backend/src/geoninja_backend/services/: analysis.py  analysis_calcs.py  glhymps_lookup.py  glim_lookup.py  hydr_grad_lookup.py  param_access.py  period_seg.py  rock_properties.py  temp_lookup.py
backend/tests/: test_analysis_calcs.py  test_analysis_route.py  test_analysis_service.py  test_contract_analysis_result_registry.py  test_contract_param_registry.py  test_glhymps_lookup.py  test_glim_lookup.py  test_health.py  test_hydr_grad_lookup.py  test_local_param_lookup_endpoint.py  test_local_param_lookup_route.py  test_models_common.py  test_openapi_snapshot.py  test_param_access.py  test_rock_properties.py
contracts/: analysis_results.json  contracts_readme.md  openapi.json  params.json
data_pipeline/: Dockerfile  mypy_report.xml  pyproject.toml  run.py
data_pipeline/scripts/: dp_glhymps.py  dp_hydr_grad.py  dp_rock_properties.py
data_pipeline/sources/glhymps/: MANIFEST.TXT  Readme_GLHYMPS2_0.txt  source.yaml
data_pipeline/sources/glim/: source.yaml
data_pipeline/sources/hydr_grad/: source.yaml
data_pipeline/sources/rock_properties/: rock_properties.csv  source.yaml
data_pipeline/src/geoninja_dp/: _dp_glim.py  _dp_rock_properties.py  dp_glhymps.py  dp_glim.py  dp_hydr_grad.py  dp_rock_properties.py  nav.py  run.py
docs/source/: conf.py  index.md  installation.md  model.md  sources.md  usage.md
frontend/: .dockerignore  .eslintrc.cjs  .prettierrc  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.css  main.tsx
frontend/src/api/: analysisRun.test.ts  analysisRun.ts  apiError.test.ts  apiError.ts  localParamLookup.test.ts  localParamLookup.ts
frontend/src/api/_generated/: openapi.types.ts
frontend/src/components/common/: ErrorToasts.tsx  InfoToolTip.tsx  KeyValueTable.tsx  keyValueRowMapper.ts
frontend/src/components/control/: ControlPanel.tsx  LocalParamsPopup.tsx  ParamField.tsx  seasonValidation.ts
frontend/src/components/location/: CoordinateNavigator.tsx  LocationSearchBar.tsx
frontend/src/components/results/: AnalysisRunParamsPopup.tsx  ResultsPanel.tsx
frontend/src/config/: analysisResultMeta.contract.test.ts  analysisResultMeta.ts  paramSelectors.ts  paramValidation.test.ts  paramValidation.ts  params.contract.test.ts  params.ts
frontend/src/hooks/: useEscapeKey.ts
frontend/src/map/: BaseLayer.tsx  GeoMarker.tsx  Map.tsx  MapCameraFollower.tsx  baseLayerRegistry.ts
frontend/src/map/layers/: OsmBaseLayer.tsx  SatBaseLayer.tsx
frontend/src/process/: adaptAnalysisRunResults.test.ts  adaptAnalysisRunResults.ts  appStore.test.ts  appStore.ts  errorStore.test.ts  errorStore.ts  useAnalysisRunProcessing.ts  useParamLookupProcessing.ts
frontend/src/types/: analysisRun.ts  params.ts
